--- a/api/composer.json
+++ b/api/composer.json
@@ -18,4 +18,13 @@
         "slim/psr7": "^1.0",
         "slim/slim": "^4.5"
     }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    }
 }
