--- a/api/composer.json
+++ b/api/composer.json
@@ -15,6 +15,7 @@
     "require": {
         "php": "^7.4",
         "ext-json": "^7.4",
+        "php-di/php-di": "^6.1",
         "slim/psr7": "^1.0",
         "slim/slim": "^4.5"
     }
