--- a/api/composer.json
+++ b/api/composer.json
@@ -21,11 +21,17 @@
     }
     ,
     "require-dev": {
+        "phpunit/phpunit": "^9.1",
         "roave/security-advisories": "dev-master"
     },
     "autoload": {
         "psr-4": {
             "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
         }
     }
 }
