--- a/api/composer.json
+++ b/api/composer.json
@@ -22,7 +22,9 @@
     ,
     "require-dev": {
         "phpunit/phpunit": "^9.1",
-        "roave/security-advisories": "dev-master"
+        "roave/security-advisories": "dev-master",
+        "squizlabs/php_codesniffer": "*",
+        "vimeo/psalm": "^3.11"
     },
     "autoload": {
         "psr-4": {
