--- a/api/composer.json
+++ b/api/composer.json
@@ -35,5 +35,15 @@
         "psr-4": {
             "App\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "run-test": "phpunit",
+        "check-code": [
+            "psalm",
+            "phpcbf src --standard=PSR2",
+            "phpcs src --standard=PSR2",
+            "phpcbf tests --standard=PSR2",
+            "phpcs tests --standard=PSR2"
+        ]
     }
 }
