Add assert lib and uuid lib

--- a/api/composer.json
+++ b/api/composer.json
@@ -16,8 +16,10 @@
         "php": "^7.4",
         "ext-json": "^7.4",
         "php-di/php-di": "^6.1",
+        "ramsey/uuid": "^4.0",
         "slim/psr7": "^1.0",
-        "slim/slim": "^4.5"
+        "slim/slim": "^4.5",
+        "webmozart/assert": "^1.8"
     }
     ,
     "require-dev": {
